# fsw

./: .config  .gitignore  CMakeLists.txt  Makefile  replit.nix
core/: ConfigStore.cpp  Log.cpp  Log.h  Message.cpp  Message.h  MessageMap.h  MessageTable.h  Service.cpp  Service.h  ServiceHub.cpp  ServiceHub.h  Time.cpp  Uart.cpp  Uart.h  Version.h  core.mk
core/services/: Engineering.cpp  Engineering.h  SerialConnectivity.cpp  SerialConnectivity.h  UpdateEngine.cpp  UpdateEngine.h
core/utils/: ConfigStore.cpp  ConfigStore.h  Uart.cpp  Uart.h  Utils.cpp  Utils.h
files/: fsw.service  fsw.service.in
init/: init.cpp
loadable/: services.mk
scripts/: engineering_mode.sh  sanity_test.sh  virtual_com.sh
services/: services.mk
services/connectivity/: SerialConnectivity.cpp  SerialConnectivity.h  connectivity.mk
services/dynamic/: Dynamic.cpp  Dynamic.h  dynamic.mk
services/engineering/: Engineering.cpp  Engineering.h  engineering.mk
services/factory/: FactoryHandler.h
services/hkmc/handler/: HKMCHandler.cpp  HKMCHandler.h  handler.mk
services/updateengine/: UpdateEngine.cpp  UpdateEngine.h  updateengine.mk
src/: Configuration.inc  Configuration.inc.in  FactoryMain.cpp
src/platform/: Log.cpp  Message.cpp  Message.h  MessageTable.h  Service.cpp  Service.h  ServiceHub.cpp  ServiceHub.h  Uart.cpp  Uart.h
src/services/connectivity/: SerialConnectivity.cpp  SerialConnectivity.h
src/services/engineering/: Engineering.cpp  Engineering.h
src/services/factory/: FactoryHandler.cpp  FactoryHandler.h
src/utils/: File.cpp  Version.h.in
test/: test.mk
tools/: CMakeLists.txt
tools/security/: main.cpp
tools/update/: main.cpp
(+2 files in other folders)
